# daicon

./: .gitignore  Cargo.toml  README.md  readme.md  run-tools-example.sh
.github/workflows/: rust.yml
crates/daicon/: CHANGELOG.md  Cargo.toml
crates/daicon-impl/: Cargo.toml
crates/daicon-impl/src/: buffer.rs  lib.rs  system.rs
crates/daicon-native/: Cargo.toml
crates/daicon-native/src/: file.rs  lib.rs
crates/daicon-tools/: Cargo.toml
crates/daicon-tools/src/: main.rs  system.rs
crates/daicon-tools/src/commands/: create.rs  get.rs  mod.rs  set.rs
crates/daicon-types/: Cargo.toml
crates/daicon-types/examples/: reader.rs  writer.rs
crates/daicon-types/src/: entry.rs  header.rs  index.rs  lib.rs
crates/daicon-web/: Cargo.toml
crates/daicon-web/examples/: fetch.html  fetch.rs
crates/daicon-web/src/: lib.rs
crates/daicon/examples/: lipsum.txt  reader.rs  writer.rs
crates/daicon/src/: cache.rs  entry.rs  file.rs  file_source.rs  header.rs  indices.rs  lib.rs  set.rs  source.rs  state.rs  table.rs  utils.rs
crates/daicon/src/data/: mod.rs
crates/daicon/src/file/: mod.rs
crates/daicon/src/file_source/: indices.rs  mod.rs  service.rs  table.rs
crates/daicon/src/io/: mod.rs
crates/daicon/src/protocol/: file.rs  mod.rs  source.rs
crates/daicon/src/source/: file.rs  mod.rs  state.rs
crates/ptero-file/: Cargo.toml
crates/ptero-file/src/: buffer.rs  lib.rs  system.rs
crates/wrapmuck/: CHANGELOG.md  Cargo.toml  readme.md
crates/wrapmuck/src/: lib.rs
docs/: daicon-cdn.md  daicon.md  explainer.md  goals.md  index.md  specification.md  use-cases.md
scripts/: example-web-build.sh  example-web-docker.sh
