[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
bytemuck = "1.13.0"
clap = "4.2.7"
stewart = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.3.0"
daicon = { version = "0.11.0", path = "./crates/daicon" }
daicon-native = { version = "0.2.0", path = "./crates/daicon-native" }
daicon-types = { version = "0.1.0", path = "./crates/daicon-types" }
