[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
bytemuck = "1.13.0"
clap = "4.2.7"
getrandom = "0.2.9"
js-sys = "0.3.63"
stewart = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.3.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = "0.3.63"
daicon = { path = "./crates/daicon" }
daicon-native = { path = "./crates/daicon-native" }
daicon-types = { path = "./crates/daicon-types" }
