[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.13"
clap = "4.2.7"
getrandom = "0.2.9"
js-sys = "0.3.63"
serde = "1.0"
stewart = "0.7.0"
thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-wasm = "0.2.1"
uuid = "1.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = "0.3.63"
daicon = { version = "0.12", path = "./crates/daicon" }
daicon-native = { version = "0.3", path = "./crates/daicon-native" }
daicon-types = { version = "0.1", path = "./crates/daicon-types" }
