[package]
name = "daicon-native"
version = "0.1.0"
edition = "2021"
description = "Native system implementations of daicon protocols"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
stewart.workspace = true
tracing.workspace = true
daicon.workspace = true
