[package]
name = "daicon-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
stewart.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
daicon.workspace = true
