[package]
name = "daicon-types"
version = "0.1.1"
edition = "2021"
description = "Daicon low-level types, for zero-copy reading and writing"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
