[package]
name = "daicon-web"
version = "0.1.0"
edition = "2021"
description = "Web fetch implementations of daicon protocols"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
js-sys.workspace = true
stewart.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
daicon.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
