[package]
name = "daicon-web"
version = "0.2.0"
edition = "2021"
description = "Web fetch implementations of daicon protocols"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
js-sys.workspace = true
stewart.workspace = true
tracing.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
daicon.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]

# This transient dependency needs to be told we're using wasm-bindgen.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
tracing-wasm.workspace = true
daicon-types.workspace = true

[dev-dependencies.web-sys]
workspace = true
features = ["Document", "Element", "HtmlElement"]
