[package]
name = "daicon"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
daicon-types.workspace = true
stewart.workspace = true
stewart-utils.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
ptero-file.workspace = true
