[package]
name = "daicon"
version = "0.10.0"
edition = "2021"
description = "Index regions of a binary blob by ID"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
daicon-types.workspace = true
stewart.workspace = true
stewart-utils.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
