[package]
name = "daicon"
version = "0.10.0"
edition = "2021"
description = "Reference rust reader/writer implementation of the daicon format"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
daicon-types.workspace = true
stewart.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
