[package]
name = "wrapmuck"
version = "0.1.0"
edition = "2021"
description = "Simple wrapper generator around bytemuck pod types"
repository = "https://github.com/open-mv-sandbox/daicon"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
